--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,13 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion "33.0.2"
+    compileSdkVersion 35
     ndkVersion "25.2.9519653"
 
     defaultConfig {
-        applicationId "com.funparadigm.stocktrend"
-        namespace "com.funparadigm.stocktrend"
+        applicationId "com.org.imgui_destop_android"
+        namespace "com.org.imgui_destop_android"
         minSdkVersion 24
         targetSdkVersion 33
         versionCode 1
